--- a/MedicalCareForm.Api/appsettings.json
+++ b/MedicalCareForm.Api/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WebApiDatabase": "Host=localhost; Database=MedicalCareFormDB; Username=postgres; Password=ShTTnG4@Di"
+    "WebApiDatabase": "Host=localhost; Database=MedicalCareFormDB; Username=postgres; Password=ShTTnG4@Di",
+    "MsSqlConnection": "Server=localhost\\SQLEXPRESS;Database=master;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
